Refactor .gitignore files, enhance Exam model validation, update question routes, and implement new components for question management

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -23,9 +23,8 @@ dist-ssr
 *.sln
 *.sw?
 
-<<<<<<< HEAD
 .env
 .env.local
-=======
-.env
->>>>>>> 536edca8eec0b5223dcb15267645ec551c08a8b1
+.env.development.local
+.env.test.local
+.env.production.local
