--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -23,9 +23,8 @@ dist-ssr
 *.sln
 *.sw?
 
-<<<<<<< HEAD
 .env
 .env.local
-=======
-.env
->>>>>>> 536edca8eec0b5223dcb15267645ec551c08a8b1
+.env.development.local
+.env.test.local
+.env.production.local
